# slrsp

./: Cargo.toml  README.md  err
libs/rspten/: Cargo.toml  err
libs/rspten/src/: attic.rs  html_types.rs  lib.rs
libs/rspten_derive/: Cargo.toml
libs/rspten_derive/src/: lib.rs
libs/serde_frommap/: Cargo.toml
libs/serde_frommap/src/: de.rs  err.rs  error.rs  lib.rs
src/: html_helpers.rs  main.rs
src/pages/: html_helpers.rs  imports.rs  login.rs  logout.rs  mod.rs  open_teststate.rs  test2state.rs  teststate.rs
templates/: dd_items.mustache  html_checkbox.mustache  html_pass.mustache  html_select.mustache  html_submit.mustache  html_text.mustache  login.mustache  open_teststate.mustache  props.mustache  test2state.mustache  teststate.mustache
