[package]
name = "aytest"
version = "0.1.0"
authors = ["Andrew Yourtchenko <ayourtch@gmail.com>"]

[dependencies]
rspten = { git = "https://github.com/ayourtch/rspten" }
rspten_derive = { git = "https://github.com/ayourtch/rspten_derive" }
req2struct = { git = "https://github.com/ayourtch/req2struct" }


serde_json = "*"
serde = "*"
serde_derive = "*"
iron = "*"
urlencoded = "*"

iron-sessionstorage = { git = "https://github.com/ayourtch/iron-sessionstorage.git" }
diesel = { version = "1.1.*", features = ["postgres", "sqlite", "huge-tables", "chrono"] }
chrono = { version = "*", features = ["serde"] }
mustache = "*"
router = "*"


