[package]
name = "rspten_derive"
version = "0.1.0"
authors = ["Andrew Yourtchenko <ayourtch@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
# syn = "0.14.4"
# quote = "0.6.3"
quote = "*"
# proc-macro2 = "*"

[dependencies.proc-macro2]
version = "*"

[dependencies.syn]
version = "*"
features = [ "full" ]

